#
# aide, Advanced Intrusion Detection Environment
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#

noinst_HEADERS = aide.h base64.h be.h commandconf.h compare_db.h \
	conf_lex.h db_config.h db_disk.h db_file.h db.h db_list.h \
	db_sql.h do_md.h fopen.h gen_list.h getopt.h gnu_regex.h \
	list.h locale-aide.h md.h report.h seltree.h \
	symboltable.h types.h url.h util.h
